# solana-flexible-staking

./: .gitignore  Anchor.toml  package.json
migrations/: deploy.js
programs/chicks-staking-flexible/: Cargo.toml
programs/chicks-staking-flexible/src/: lib.rs
tests/: step-staking-flexible.js
