[package]
name = "chicks-staking-flexible"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "chicks_staking_flexible"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

#add to default for local testing
#note, can also use `anchor test -- --feature local-testing,test-id` now
#default = ["local-testing", "test-id"]
local-testing = []
test-id = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.8.10"
